[project]
name = "delivery-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.116.1",
  "pydantic>=2.11.7",
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.9",
  "geoalchemy2>=0.14.0",
  "uvicorn>=0.22.0",
  "pydantic-settings>=2.10.1",
  "geojson-pydantic>=2.0.0",
  "shapely>=2.0.0",
  "redis>=5.0.1",
  "pygeohash>=3.2.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.3.2",
    "ruff>=0.12.11",
]

[tool.pytest.ini_options]
pythonpath = [".", "backend"]

[tool.pyright]
extraPaths = ["backend"]

[tool.isort]
profile = "black"
case_sensitive = true
